resolved the alignement issue in buyer supplier and admin panel

--- a/src/Buyer/components/Buy/BySupplier/bysupplier.module.css
+++ b/src/Buyer/components/Buy/BySupplier/bysupplier.module.css
@@ -197,8 +197,11 @@ ul {
     font-weight: 500;
 }
 .ButtonContainer{
-    width: 110px;
-    min-width: 104px;
+    width: 12%;
+    min-width: 110px;
+    display: flex
+;
+    justify-content: end;
 }
 /* End Card Container */
 @media screen and (max-width: 1420px) {
